# ChangeLog for dev-python/netifaces
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/netifaces/ChangeLog,v 1.14 2013/12/28 22:32:10 xmw Exp $

*netifaces-0.8-r2 (28 Dec 2013)

  28 Dec 2013; Michael Weber <xmw@gentoo.org>
  +files/netifaces-0.8-remove-osx-fix.patch, +netifaces-0.8-r2.ebuild:
  Remove broken OS X fix, thanks Laurent Bachelier (bug 451416)

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> netifaces-0.8-r1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*netifaces-0.8-r1 (17 Jun 2013)

  17 Jun 2013; Michael Weber <xmw@gentoo.org> +netifaces-0.8-r1.ebuild:
  distutils-r1 migration

  11 Jul 2012; Mike Frysinger <vapier@gentoo.org> netifaces-0.8.ebuild:
  Add arm love for ChromiumOS.

  22 May 2012; Michael Weber <xmw@gentoo.org> -netifaces-0.6.ebuild:
  Remove old version

  22 May 2012; Agostino Sarubbo <ago@gentoo.org> netifaces-0.8.ebuild:
  Stable for amd64, wrt bug #417053

  22 May 2012; Jeff Horelick <jdhore@gentoo.org> netifaces-0.8.ebuild:
  marked x86 per bug 417053

  22 May 2012; Michael Weber <xmw@gentoo.org> -netifaces-0.5.ebuild:
  Remove old version

  09 Apr 2012; Agostino Sarubbo <ago@gentoo.org> netifaces-0.6.ebuild:
  Stable for amd64, wrt bug #411007

  07 Apr 2012; Jeff Horelick <jdhore@gentoo.org> netifaces-0.6.ebuild:
  marked x86 per bug 411007

*netifaces-0.8 (06 Apr 2012)

  06 Apr 2012; Michael Weber <xmw@gentoo.org> +netifaces-0.8.ebuild:
  Version bump.

  22 Feb 2012; Patrick Lauer <patrick@gentoo.org> netifaces-0.5.ebuild,
  netifaces-0.6.ebuild:
  Restricting jython

*netifaces-0.6 (17 Nov 2011)

  17 Nov 2011; Stefan Briesenick <sbriesen@gentoo.org> +netifaces-0.6.ebuild:
  version bump + fixed SRC_URI.

*netifaces-0.5 (11 Nov 2011)

  11 Nov 2011; Michael Weber <xmw@gentoo.org> +netifaces-0.5.ebuild,
  +metadata.xml:
  Initial import from sunrise overlay, thanks (bug 248601)