@@ -4,14 +4,14 @@ Hash: SHA256
 AUX netifaces-0.8-remove-osx-fix.patch 664 SHA256 66522dc2f795955e4249299a2fefc65b36b905bc8fee3db58e9b1dd2717b4f01 SHA512 0a13de2a14f73f1d016683ede4037373aceb117872b3b30991b0f179482395030b7c628d450c3addafb045a485d05500e6afc69d95bc7cd86eb5b14b05f22ce9 WHIRLPOOL edff67e7d9e41a23af1097e8abbb3f74ad00f228b503fed19d739c110f8f3e1ec729916e961707b9896b30f8e00d9bd5fc21053db47869dc57219af22df332fc
 DIST netifaces-0.8.tar.gz 15484 SHA256 53a711038db3d6e5cf7129d6f751185fd052f830f12f271fbfe17bd2671ab1ec SHA512 b3735c4f83d4ed1d52f59937187659f148205a721fd05ce5a10e9ec89ea3519971001b2985e24bb30fb112ee741310babd847f84d4c3fbb34989edc6a743f551 WHIRLPOOL 4f638d769a38a474f0a27642544e1b6e932643f224133024cbfdb44e9637700afc10675fccd61e52e5f6e8a121b25173895d9f173b428aefceded22a42af7ab6
 EBUILD netifaces-0.8-r1.ebuild 579 SHA256 b033b92ef670ce2775ae2cc6730ca12b26903d2c0e8a9f0c65a6d605b68e8b1a SHA512 a65814277d0c1147dba4581e601a1b546399ab1d42ef7ef8eeb90308da3a5f16ba6202688e17c6d57a06238a24139e1e9e27348cf89c28255200cea4a63ed6f7 WHIRLPOOL 73ca38daf4b58958e4f895f2479ffcf3b78d75957fab5668136fdbc9e0caef0d924f47d444e69223f96684a98c9967d3c8af079cd7a6b602bb2fc614f889f302
-EBUILD netifaces-0.8-r2.ebuild 629 SHA256 25ae96ebd2e91d0550770fb75d0b523605044f76e19e3c467d3c5bd7d294222b SHA512 667fbf2ddc89ba75574762a3148436bbfa9b4ec0ffb456aa87a5838cb1af16de13772f7d4969b150fc250b9f5fb92b01c5ae845b050d71c532395a013531dad8 WHIRLPOOL 906c3ff5618e4cd8b0afe8a92949a46b644819401f509c8cf5cae6fcacb01288ba9d0f3d1388173bdddb9e616ac3766e92afa3e4b62670c29cbcf980462640ae
+EBUILD netifaces-0.8-r2.ebuild 658 SHA256 f5835c314f192d1ef70f846043fb98c1f97113c30833221823036e4e122ea863 SHA512 b6ca34030ea28d0603b968671330ef17081f0bb287693091168926df3fecb5bbf14dd4b5ecd37b73872cf326e74064c55ea5e72c22666649cd2dab03c6ec759d WHIRLPOOL 7520ae814cf4cfdacbfffa84dffa44762fcb2e1b2538e273f496cda60ee203458bedaf27cd84c6a86faaf158c837e0f22fd3916991023b267dfe2d92f6352a44
 EBUILD netifaces-0.8.ebuild 603 SHA256 cf02220bd1a9342ed38f76796c640487d98d77e488bed0c9e173f4c1221bbb0d SHA512 8eb93cb9cbf28bec93b9a77f5486de6329e58cf2f3f9e49b76c3c0ce5ad8dcefbd790c80dbefa51368affc404d1195ae0773d8b958646754591878c902ee8248 WHIRLPOOL 7b46c3010e28ba5993b0435dcfb60c2b9fadd38e3ff45d8ee66c800bd9df75c41787bec784ad9e4687116ba0b964e30cca6cff2afa1faabf0d0419011d71953c
-MISC ChangeLog 1936 SHA256 e85229838bbd441163cff6f6e4501bf3e9c4c96c9aee9fb8a46f0c25a8562ab0 SHA512 86c5aa4e91518d5f57230caba1e6694959a98ecebf910b02e8993def605d490252c5656d8a72731ba5d78cb6c8a458420404025676d60d32652ef03f52fd9e93 WHIRLPOOL 1d29845ab5b953720531f67df6524d7c72b01629663653fbea1ca86e029d9bf20ce10e3dfd445505735e1978845a30dd6c5c02fc5e2ac917dee1ceaa575d5ee9
+MISC ChangeLog 2056 SHA256 237382423701f90ee69f7d235acff4c626b6dec8f35289dbbfba345a2d8a6eef SHA512 d76d747f692a341acc594215964a8b34e3224f61561e271209be860a83914263d13c6fc66e2b434f2562884f10327414581a599f464aec99bbe47a1a6d28e704 WHIRLPOOL eea3beb0dcc3b116c4784dd18b899496f256a7f825650087fe496d7609529b077ce917c0aa38faab9692a1d898af21f0897b72ff87622f6ec575900a3951ca4d
 MISC metadata.xml 244 SHA256 bd22f3781f7fb8fad579e03ab3eb8537f5c56cf7366e69670bf4f9abc26f93fb SHA512 cb082e5678ca9c90c9a514ca612c1cf521d64894b01486017d19a94e6aeb2588d3a1f072cc6805be3ce716d3f9f6cef55e17e20392697a979272e877eb73dc80 WHIRLPOOL 3a181e05016717d0fdad07aa72d6b965e0b758a3c4f0523829b994a607d51866c9aab9976435904b9457d8437afe380b643436532b70292c539fa2117d7f763f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlK/UWsACgkQknrdDGLu8JABFAD/U+soC+syn0j/EKtnhrIs2dRa
-IMlU/DeB5mJ3HkyJ6v8A/3NMQXdf2BtzMjobdMMywL5l3x39uo+zUwgW+u//l3xW
-=DNOq
+iEYEAREIAAYFAlMrXfcACgkQ1ycZbhPLE2B43ACfdaPjuA7L6rWcW+uTotHJOnoO
+r7sAoIY9V2ZBy8miyyeroX3VpyY4BaSr
+=I/h4
 -----END PGP SIGNATURE-----
