@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/netifaces/netifaces-0.8-r2.ebuild,v 1.1 2013/12/28 22:32:10 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/netifaces/netifaces-0.8-r2.ebuild,v 1.2 2014/03/20 21:30:27 bicatali Exp $
 
 EAPI=5
 
@@ -14,7 +14,7 @@ SRC_URI="http://alastairs-place.net/projects/${PN}/${P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="~amd64 ~arm ~x86"
+KEYWORDS="~amd64 ~arm ~x86 ~amd64-linux ~x86-linux"
 IUSE=""
 
 DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]"
