@@ -27,15 +27,15 @@ DIST gdm-3.8.4.tar.xz 1677040 SHA256 db40fb66bf476721b6d333abe0bfed7feacdca7d492
 DIST gentoo-gdm-theme-r3.tar.bz2 411703 SHA256 c7cbe97757ff93f0ffd42f9d9fb702278a361e830940a03901cda9943f44ba68 SHA512 47485899c698a2f6c3dee540806c0bbdedeab77a31b1f2b191f7f98d0d88a580aeb8dddf16fc33226db0519c21d185112421b5c6e233883ea4f67c844028281a WHIRLPOOL bac9f9ef3e7e88401e605c34deca6e7c31e2d4456af3781252a91f7bc33084af27ecc9e4a74022767b25db23d8f70842a39225c8544f1c02229ad7f7af670d42
 DIST tango-gentoo-v1.1.tar.gz 29322 SHA256 518efa4257c8e689488399db23397a89f4dcd5990ce537ef6215860ad5606eb0 SHA512 87d47ddab68361db6d99866c51705dcb3e198f8345a1096859acf2c6cca5099dd23c7fb30d124f52c4933ea38fd45fadffbbe6ecbdfa84f5b60938a4824f9045 WHIRLPOOL 9e1635a505ea48f4fe8bdb3b8b3b43cfb9cf99e3204194c51361b198886e719921cfacbc15f9f6407aa7d0c4af178e24c74b998fc370fa2329040e5be1baf153
 EBUILD gdm-2.20.11-r1.ebuild 7373 SHA256 0a27e4a2c37ba6980cc886ddfafdbce65c88d29cd66b79c95d04832f3b993b10 SHA512 493f7d8863fda71849ea7c3385889c1bfa3fe1e95060d0b4c1842338c46aaa912474de38c8531158cdba12db0e24baff1e9b215ab9ad52d6ea8504a857398fc4 WHIRLPOOL d89f68ad7b60493bf6f0bd1cb725942da9b050a10c9cc2c955f541f9e19a1b7ca99fccee6fb2b5dcf944c074c6dde70befb81f2f15a0bff730a53f7698867af3
-EBUILD gdm-3.10.0.1-r1.ebuild 6808 SHA256 7fc06fd59d3b2441ac1b6ccba53fdad6010910faae32c20921f4b400ada25f56 SHA512 33e4ecb81f51a926e65a4c6d99ac2b2481dbf3a89ee46b10b006a815efce1ce6683eaf0b4601c1bb6e37048f5b37a007f150453d6b6c448d44ee19006455efd8 WHIRLPOOL 6f86f96a7c4c520bf0b8e4ce4ff600ef44121fb0a32b050245e0fb6c60f8efbb5af578be0d863fdb71f9c7ed094b3d7b3caffcd7b9698341afdcd59d425bc7ac
+EBUILD gdm-3.10.0.1-r1.ebuild 6955 SHA256 4aaf1338de24f779f090c9187947178b35dfb92b910d0d8713b720fd8b637cd4 SHA512 d29ffe805993a69a9f05753453481d0eef57d5b578844b7efc944e476e36af32f403814c206678f054561767786f7913f36d7500396cc91cd20a97596ce033f9 WHIRLPOOL 26c1f6964d83523f60a1d0036b89634d4851e528007cfe13412ad693997415f84e9450fb0758b0fbfdae45efb36527850a4a4d85e77e629fdf2c8bbc920360a6
 EBUILD gdm-3.10.0.1.ebuild 6646 SHA256 a003dbb820812be81a917f2bd2e56d6592464624ffe85770b6dbd17666e738a1 SHA512 9c8aca1063ac7596308c744ecfff2486e5c33bf14ef32438d17465bcda8e6c0063d81842a7fb352ce037c34764de5948c0cab3c29cf1ee3686e3466c611f13e7 WHIRLPOOL dea1ba5b5ec2b08548e1a1def5fe4cc148b151bc0436d5ea8c34b9c0f4c17083b769be22e7ddbddc2657b65816090c75e237da580d7be09d982e83774147fed0
 EBUILD gdm-3.8.4-r3.ebuild 7172 SHA256 1efba3a67cefdbc2dc8c1fd1b0a4a7e1815bed4fce880e390f1e54fa46d35e48 SHA512 5fbb6e794ca95f61d0ebb0588ab05a985f433afc92d35b7442c64801f850c29a2e491477e35e811d796bea31561c703273537c233c819b817180063bd9562926 WHIRLPOOL 14f8fddd69aba5af70f43a3fb8c40f910e4567306589b0c50a818f1473d39175d5c2bb4e8ea8b0a1af9ad1396667001387a3275a17e1f37ceac618f247f1f613
-MISC ChangeLog 60857 SHA256 93d52970db32cbfd79ce3c85627f57d80b595a08688d2ed29c33e0813f11d597 SHA512 80b3e4b1bb34dbb355dff934803dd073a27932c76f7bd5b9a85d423d5f78375b22f7ed381a929c2292ff194085238800db20eee42c59a4dc78229f603e28e1be WHIRLPOOL f370176256e4cf90e5d0a02e0c725aab765bb2fa5f6f3eae8fa4c39cbe29a5c8c51006721c820f22f730d7b3302af00c4dda19e2225c1db696ecc954aef5408a
+MISC ChangeLog 61001 SHA256 8318832742436a7fb1a9db50bc8ce6228eb429942fbed928ab65a2824659622a SHA512 510fae93e8d54fa39f19328318f67ab91640a23fd2a76edfae6db6505c220b3ce75fd18951ae4e759474a5cb0e24619522ae11a3978d687bdd406d045efad389 WHIRLPOOL b29e6981e3358288a95e9ab47ec2846708f1765992879391d703a1769f29d853cccb8b61496315e3aa22d72384937f26b6d1b4092365151f7abf0d709ee30e69
 MISC metadata.xml 944 SHA256 08ee2dd40862efd5316443b8d84df4a1dafca76236e0f107240d8ccb6a0d0087 SHA512 f1ca94a651af983dd0e8b8b346be9c682011ec1c9a3293bb54fdd4a6effae14cd4a8efe2dfff7d143faad39cdcd9dab92bf7bad0244b1cca3e5e24c557963544 WHIRLPOOL dc83e5716dd4545c4daa1ee2b8aa7c6f993d0781c0518c2102c30772e683c46b56d1fe5494b6814232db434b96230c7bbd60790d158cd0f9fc24d69b91368219
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlMqGo0ACgkQCaWpQKGI+9RSYQCgh7+5h81pfyau6rReT2BFWrvl
-OdgAn3XqAbOtte6jFbrDC0WgMiXsuwkT
-=V4jq
+iEYEAREIAAYFAlMrXZsACgkQCaWpQKGI+9QEFQCfRjTIF3DSGqTD6iCOwMLWSniS
+H0YAn10PSXqaxvWPC1423Dbl4Q7xr9wH
+=HPte
 -----END PGP SIGNATURE-----
