@@ -4,11 +4,11 @@ DESCRIPTION=Portable network interface information
 EAPI=5
 HOMEPAGE=http://alastairs-place.net/netifaces/
 IUSE=python_targets_python2_6 python_targets_python2_7
-KEYWORDS=~amd64 ~arm ~x86
+KEYWORDS=~amd64 ~arm ~x86 ~amd64-linux ~x86-linux
 LICENSE=MIT
 RDEPEND=python_targets_python2_6? ( >=dev-lang/python-2.6.8-r3:2.6 ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_6(-)?,python_targets_python2_7(-)?,-python_single_target_python2_6(-),-python_single_target_python2_7(-)]
 REQUIRED_USE=|| ( python_targets_python2_6 python_targets_python2_7 )
 SLOT=0
 SRC_URI=http://alastairs-place.net/projects/netifaces/netifaces-0.8.tar.gz
 _eclasses_=distutils-r1	364122897f9dc771167ee5ff362e54e1	eutils	af81d52c25ec93fbdff71e0efb0de7b7	multibuild	56d4120419072116417e8de1bd1040ff	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-r1	3bb814ab7959a36067101a6bef683b6f	python-utils-r1	18d8279a3382bf4453e7ff35208ce907	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=f055b50490178e7d4fafa25a2b66e7ce
+_md5_=d6755e0eb7454cf4d95b52bd7db4e165
