@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/netifaces
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/netifaces/ChangeLog,v 1.14 2013/12/28 22:32:10 xmw Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/netifaces/ChangeLog,v 1.15 2014/03/20 21:30:27 bicatali Exp $
+
+  20 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> netifaces-0.8-r2.ebuild:
+  Keyword ~amd64-linux ~x86-linux
 
 *netifaces-0.8-r2 (28 Dec 2013)
 
